# fastsort

./: Cargo.toml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: check.yml  release.yml
bench/: benchmark.py  experiment.py  visualize.py
bench/helpers/: log_config.py
src/: lib.rs
src/fastsort/: __init__.py
tests/: test_fastsort.py
