[project]
name = "fastsort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Muhr", email = "muhrdavid+github@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
]

[tool.maturin]
module-name = "fastsort._core"
python-packages = ["fastsort"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
